# classics-ranking-bot

./: Cargo.toml  README.md  config-example.json
src/: main.rs
