[package]
name = "classics-ranking-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.136", features=["derive"]}
tokio = { version = "1.27.0", features = ["full"] }
safelog = {version="0.3.0", features=["serde"]}
serde_json = "1.0.94"
thiserror = "1.0.40"
roboat = "0.20.0"
