[package]
authors = ["fekie <fekiewekie@gmail.com>"]
categories = []
description = "An on-command ranking bot for the -Classics- Roblox group https://www.roblox.com/groups/3489210/Classics"
edition = "2021"
keywords = ["roblox", "roblox-ranking-bot"]
license = "MIT"
name = "classics-ranking-bot"
readme = "README.md"
repository = "https://github.com/Chloe-Woahie/classics-ranking-bot"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.136", features=["derive"]}
tokio = { version = "1.27.0", features = ["full"] }
safelog = {version="0.3.0", features=["serde"]}
serde_json = "1.0.94"
thiserror = "1.0.40"
roboat = "0.20.1"
